Bug 530526 - Don't use deprecated Number children constructors
Deprecated in Java 9 but the replacment methods are here for long time.

Change-Id: I645d66492831a95d27f61bc443c8896d73440579
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>