@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2017 IBM Corporation and others.
+ * Copyright (c) 2007, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -659,7 +659,7 @@ public class SimpleArtifactRepository extends AbstractArtifactRepository impleme
 		int bufferSize = 16 * 1024;
 		byte[] buffer = new byte[bufferSize];
 		// Number of passes in the below loop, convert to integer which is needed in monitor conversion below
-		int expected_loops = new Double(in.length() / bufferSize).intValue() + 1; // +1: also count the initial run
+		int expected_loops = Double.valueOf(in.length() / bufferSize).intValue() + 1; // +1: also count the initial run
 		SubMonitor sub = SubMonitor.convert(monitor, Messages.downloading + in.getName(), expected_loops);
 		// Be optimistic about the outcome of this...
 		IStatus status = new DownloadStatus(IStatus.OK, Activator.ID, Status.OK_STATUS.getMessage());
