@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2017 IBM Corporation and others. All rights reserved. This
+ * Copyright (c) 2007, 2018 IBM Corporation and others. All rights reserved. This
  * program and the accompanying materials are made available under the terms of
  * the Eclipse Public License v1.0 which accompanies this distribution, and is
  * available at http://www.eclipse.org/legal/epl-v10.html
@@ -466,7 +466,7 @@ public class ProvCommandProvider implements CommandProvider {
 		interpreter.println(profileId);
 		for (int i = 0; i < profileTimestamps.length; i++) {
 			interpreter.print("\t"); //$NON-NLS-1$
-			interpreter.println(new Long(profileTimestamps[i]));
+			interpreter.println(Long.valueOf(profileTimestamps[i]));
 		}
 	}
 
@@ -481,7 +481,7 @@ public class ProvCommandProvider implements CommandProvider {
 		}
 		Long ts = null;
 		try {
-			ts = new Long(timestamp);
+			ts = Long.valueOf(timestamp);
 		} catch (NumberFormatException e) {
 			interpreter.println("Timestamp " + timestamp + " not valid.  Timestamps can be retrieved via 'provlpts' command.");
 			return;
