@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2007, 2017 IBM Corporation and others.
+ *  Copyright (c) 2007, 2018 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -271,7 +271,7 @@ public class RepositoryListener extends DirectoryChangeListener {
 					}
 				} else {
 					File iuFile = new File(filename);
-					Long iuLastModified = new Long(iu.getProperty(FILE_LAST_MODIFIED));
+					Long iuLastModified = Long.valueOf(iu.getProperty(FILE_LAST_MODIFIED));
 					currentFiles.put(iuFile, iuLastModified);
 				}
 			}
